# terrain_solver

./: .gitignore  README.md  build.sh  check_ffmpeg_drawtext.sh  config.toml  export_existing_flat.sh  external_data  make_dual_view_video.sh  model_smartsim_smoke_test.py  only_render.sh  prepare.py  proper_slurm_job.sh  render.py  render_slice.py  slurm_sbatch_mini_app.sh  smartsim_controller.py  submit_chunked_jobs.sh  submit_mini_app_jobs.sh  submit_proper_slurm_jobs.sh  visualization.md
analysis/: s1mil_d1000.ipynb  s1mil_d2000.0.ipynb  s1mil_d2000_n1.ipynb  step_timing_analysis.ipynb
logs/: mini_app_65811816.out  mini_app_65811946.out  mini_app_65811990.out  mini_app_66194041.out  mini_app_66199640.out  mini_app_66199887.out  mini_app_66200205.out  mini_app_66200206.out  mini_app_driver_66136054.txt  mini_app_driver_66137063.txt  mini_app_driver_66147641.txt  mini_app_driver_66147712.txt  mini_app_driver_66147822.txt  mini_app_driver_66148272.txt  mini_app_driver_66148311.txt  mini_app_driver_66149092.txt  mini_app_driver_66149431.txt  mini_app_driver_66149512.txt  mini_app_driver_66153670.txt  mini_app_driver_66153673.txt  mini_app_driver_66153675.txt  mini_app_driver_66155862.txt  mini_app_driver_66156829.txt  mini_app_driver_66157081.txt  mini_app_driver_66157612.txt  mini_app_driver_66166058.txt  mini_app_driver_66199367.txt  mini_app_driver_66220493.txt  mini_app_driver_66220507.txt  mini_app_driver_66220509.txt  mini_app_driver_66220511.txt  mini_app_driver_66220844.txt  mini_app_driver_66221882.txt  mini_app_driver_66221894.txt  mini_app_driver_66221897.txt  mini_app_driver_66224310.txt  mini_app_driver_66224919.txt  mini_app_driver_66266167.txt  mini_app_driver_66270122.txt  mini_app_driver_66279546.txt  (+307 more)
logs/ping_mesh_raw_66490963/: raw_n23g0005.json  raw_n23g0014.json  raw_n23g0015.json
logs/ping_mesh_raw_66491005/: raw_n23g0013.json  raw_n23g0015.json  raw_n23g0024.json
logs/ping_mesh_raw_66491032/: raw_n23g0013.json  raw_n23g0015.json  raw_n23g0016.json  raw_n23g0017.json  raw_n23g0018.json  raw_n23g0019.json  raw_n23g0022.json  raw_n23g0024.json
logs/ping_mesh_raw_test/: raw_login23-g-1.json
logs/ping_mesh_raw_test1/: raw_login23-g-1.json
network_diag/: ping_mesh.py  ping_mesh_stats.py  sbatch_ping_mesh.sh
old/: prepare.py
smartsim_experiments/65963702/orchestrator/: orchestrator_0.err  orchestrator_0.out
smartsim_experiments/65975256/orchestrator/: orchestrator_0.err  orchestrator_0.out
smartsim_experiments/65975399/orchestrator/: orchestrator_0.err  orchestrator_0.out
smartsim_experiments/65975669/orchestrator/: orchestrator_0.err  orchestrator_0.out
smartsim_experiments/65977187/orchestrator/: orchestrator_0.err  orchestrator_0.out
smartsim_experiments/65982640/orchestrator/: orchestrator_0.err  orchestrator_0.out
smartsim_experiments/65993672/orchestrator/: orchestrator_0.err  orchestrator_0.out
smartsim_experiments/66014667/orchestrator/: orchestrator_0.err  orchestrator_0.out
smartsim_experiments/66016497/orchestrator/: orchestrator_0.err  orchestrator_0.out
smartsim_experiments/66017170/orchestrator/: orchestrator_0.err  orchestrator_0.out
smartsim_experiments/66041531/orchestrator/: orchestrator_0.err  orchestrator_0.out
smartsim_experiments/66046453/orchestrator/: orchestrator_0.err  orchestrator_0.out
smartsim_experiments/66072401/orchestrator/: orchestrator_0.err  orchestrator_0.out
smartsim_experiments/66073793/orchestrator/: orchestrator_0.err  orchestrator_0.out
smartsim_experiments/66082717/orchestrator/: orchestrator_0.err  orchestrator_0.out
smartsim_experiments/66086675/orchestrator/: orchestrator_0.err  orchestrator_0.out
smartsim_experiments/66091300/orchestrator/: orchestrator_0.err  orchestrator_0.out
smartsim_experiments/66094058/orchestrator/: orchestrator_0.err  orchestrator_0.out
smartsim_experiments/66094335/orchestrator/: orchestrator_0.err  (+1 more)
solver_cpp/: CMakeLists.txt  build_real_function_jit_model.py  check_zero_model_output.py  terrain_solver.cpp
solver_cpp/build_cpp_module/: CMakeCache.txt  Makefile  cmake_install.cmake  terrain_solver
solver_cpp/build_mpi/: CMakeCache.txt  Makefile  cmake_install.cmake  terrain_solver
solver_cpp/include/: terrain_application.hpp
solver_cpp/stable/: CMakeCache.txt  Makefile  cmake_install.cmake  terrain_solver
tmp_job/: slurm_sbatch_mini_app_n1_t1.sh  slurm_sbatch_mini_app_n1_t12.sh  slurm_sbatch_mini_app_n1_t16.sh  slurm_sbatch_mini_app_n1_t2.sh  slurm_sbatch_mini_app_n1_t24.sh  slurm_sbatch_mini_app_n1_t32.sh  slurm_sbatch_mini_app_n1_t4.sh  slurm_sbatch_mini_app_n1_t48.sh  slurm_sbatch_mini_app_n1_t6.sh  slurm_sbatch_mini_app_n1_t64.sh  slurm_sbatch_mini_app_n1_t72.sh  slurm_sbatch_mini_app_n1_t8.sh  slurm_sbatch_mini_app_n1_t96.sh
train_models/model_a/: architecture.md  artifact_manifest_benchmark_giant_mlp.json  artifact_manifest_benchmark_giant_mlp_flat.json  artifact_manifest_perfect_model.json  artifact_manifest_perfect_model_flat.json  artifact_manifest_transformer_mlp.json  artifact_manifest_transformer_mlp_flat.json  artifact_manifest_watercnn.json  artifact_manifest_watercnn_flat.json  best_model_field_jit_transformer_mlp.pt  best_model_field_jit_watercnn.pt  best_model_jit_perfect_model_flat.pt  best_model_jit_transformer_mlp.pt  best_model_jit_transformer_mlp_flat.pt  best_model_jit_watercnn.pt  best_model_jit_watercnn_flat.pt  best_model_perfect_model.onnx  best_model_perfect_model.pt  best_model_perfect_model_flat.onnx  best_model_tf_perfect_model.pb  best_model_tf_perfect_model_flat.pb  best_model_tf_transformer_mlp.pb  best_model_tf_transformer_mlp_flat.pb  best_model_tf_watercnn.pb  best_model_tf_watercnn_flat.pb  best_model_transformer.pt  best_model_transformer_mlp.onnx  best_model_transformer_mlp.pt  best_model_transformer_mlp_flat.onnx  best_model_watercnn.onnx  best_model_watercnn.pt  best_model_watercnn_flat.onnx  plot_training_logs.ipynb  prepare  prepare_mpi  prepare_training_data.err  prepare_training_data.out  prepare_training_data.py  prepare_training_data_help.md  prepare_training_data_mpi.sbatch  (+14 more)
(+132 files in other folders)
